Fixed jpa executing on io thread
