# quarkus/quarkus-vertx-openapi-demo/src/main/java/com/hurui/entity/Post.java
@@ -3,42 +3,37 @@ package com.hurui.entity;
 import io.quarkus.hibernate.orm.panache.PanacheEntityBase;
 import io.vertx.codegen.annotations.DataObject;
 import io.vertx.core.json.JsonObject;
-import org.hibernate.envers.AuditJoinTable;
 import org.hibernate.envers.Audited;
 import org.hibernate.envers.NotAudited;
 
 import javax.persistence.*;
 import java.io.Serializable;
 import java.time.ZonedDateTime;
+import java.util.ArrayList;
+import java.util.List;
 
 @Entity
 @Audited(withModifiedFlag = true)
-//@AuditJoinTable
-@Table(name = "comment")
+@Table(name = "post")
 @DataObject(generateConverter = true)
-public class Comment extends PanacheEntityBase implements Serializable {
+public class Post extends PanacheEntityBase implements Serializable {
 
-    private static final long serialVersionUID = 7522151012033553944L;
+    private static final long serialVersionUID = -4785888052205745953L;
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     @Column(name = "id", nullable = false)
     private Long id;
 
-    @ManyToOne(fetch = FetchType.LAZY)
-    private Post post;
+    @Column(name = "title", nullable = false, length = 500)
+    private String title;
 
-    @Column(name = "text", length = 300, nullable = false)
+    @Column(name = "text", nullable = false, length = 20000)
     private String text;
 
-    @Column(name = "display_name", length = 300, nullable = false)
-    private String displayName;
-
-    @Column(name = "likes", nullable = false)
-    private Long likes;
-
-    @Column(name = "dislikes", nullable = false)
-    private Long dislikes;
+    @OneToMany(mappedBy = "post", cascade = CascadeType.ALL, orphanRemoval = true)
+    @Column(name = "comments")
+    private List<Comment> comments = new ArrayList<>();
 
     @NotAudited
     @Column(name = "created_date", nullable = false)
@@ -48,26 +43,25 @@ public class Comment extends PanacheEntityBase implements Serializable {
     @Column(name = "last_modified_date", nullable = false)
     private ZonedDateTime lastModifiedDate;
 
-    public Comment() {
+    public Post() {
     }
 
-    public Comment(Long id, String text, String displayName, Long likes, Long dislikes, ZonedDateTime createdDate, ZonedDateTime lastModifiedDate) {
+    public Post(Long id, String title, String text, List<Comment> comments, ZonedDateTime createdDate, ZonedDateTime lastModifiedDate) {
         this.id = id;
+        this.title = title;
         this.text = text;
-        this.displayName = displayName;
-        this.likes = likes;
-        this.dislikes = dislikes;
+        this.comments = comments;
         this.createdDate = createdDate;
         this.lastModifiedDate = lastModifiedDate;
     }
 
-    public Comment(JsonObject jsonObject) {
-        CommentConverter.fromJson(jsonObject, this);
+    public Post(JsonObject jsonObject) {
+        PostConverter.fromJson(jsonObject, this);
     }
 
     public JsonObject toJson() {
         JsonObject jsonObject = new JsonObject();
-        CommentConverter.toJson(this, jsonObject);
+        PostConverter.toJson(this, jsonObject);
         return jsonObject;
     }
 
@@ -90,12 +84,12 @@ public class Comment extends PanacheEntityBase implements Serializable {
         this.id = id;
     }
 
-    public Post getPost() {
-        return post;
+    public String getTitle() {
+        return title;
     }
 
-    public void setPost(Post post) {
-        this.post = post;
+    public void setTitle(String title) {
+        this.title = title;
     }
 
     public String getText() {
@@ -106,28 +100,12 @@ public class Comment extends PanacheEntityBase implements Serializable {
         this.text = text;
     }
 
-    public String getDisplayName() {
-        return displayName;
+    public List<Comment> getComments() {
+        return comments;
     }
 
-    public void setDisplayName(String displayName) {
-        this.displayName = displayName;
-    }
-
-    public Long getLikes() {
-        return likes;
-    }
-
-    public void setLikes(Long likes) {
-        this.likes = likes;
-    }
-
-    public Long getDislikes() {
-        return dislikes;
-    }
-
-    public void setDislikes(Long dislikes) {
-        this.dislikes = dislikes;
+    public void setComments(List<Comment> comments) {
+        this.comments = comments;
     }
 
     public ZonedDateTime getCreatedDate() {
