# quarkus/quarkus-vertx-openapi-demo/src/main/resources/webroot/openapi.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
-    "title": "Swagger Petstore",
+    "title": "Openapi",
     "license": {
       "name": "MIT"
     }
@@ -13,19 +13,19 @@
     }
   ],
   "paths": {
-    "/pets": {
+    "/posts": {
       "get": {
-        "summary": "List all pets",
-        "operationId": "listPets",
-        "x-vertx-event-bus": "test",
+        "summary": "List all posts",
+        "operationId": "listPosts",
+        "x-vertx-event-bus": "x-vertx-event-bus-address-posts",
         "tags": [
-          "pets"
+          "posts"
         ],
         "parameters": [
           {
             "name": "limit",
             "in": "query",
-            "description": "How many items to return at one time (max 100)",
+            "description": "How many items to return at one time (max 1000)",
             "required": false,
             "schema": {
               "type": "integer",
@@ -35,7 +35,7 @@
         ],
         "responses": {
           "200": {
-            "description": "A paged array of pets",
+            "description": "A paged array of posts",
             "headers": {
               "x-next": {
                 "description": "A link to the next page of responses",
@@ -47,71 +47,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Pets"
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "summary": "Create a pet",
-        "operationId": "createPets",
-        "tags": [
-          "pets"
-        ],
-        "responses": {
-          "201": {
-            "description": "Null response"
-          },
-          "default": {
-            "description": "unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/pets/{petId}": {
-      "get": {
-        "summary": "Info for a specific pet",
-        "operationId": "showPetById",
-        "tags": [
-          "pets"
-        ],
-        "parameters": [
-          {
-            "name": "petId",
-            "in": "path",
-            "required": true,
-            "description": "The id of the pet to retrieve",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Expected response to a valid request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Pet"
+                  "$ref": "#/components/schemas/Posts"
                 }
               }
             }
@@ -132,29 +68,60 @@
   },
   "components": {
     "schemas": {
-      "Pet": {
+      "Post": {
         "type": "object",
         "required": [
           "id",
-          "name"
+          "title"
         ],
         "properties": {
           "id": {
             "type": "integer",
             "format": "int64"
           },
-          "name": {
+          "title": {
             "type": "string"
           },
-          "tag": {
+          "text": {
+            "type": "string"
+          },
+          "comments": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Comments"
+            }
+          }
+        }
+      },
+      "Posts": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/Post"
+        }
+      },
+      "Comment": {
+        "type": "object",
+        "required": [
+          "id",
+          "title"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "title": {
+            "type": "string"
+          },
+          "text": {
             "type": "string"
           }
         }
       },
-      "Pets": {
+      "Comments": {
         "type": "array",
         "items": {
-          "$ref": "#/components/schemas/Pet"
+          "$ref": "#/components/schemas/Comment"
         }
       },
       "Error": {
